# src/routes/admin/admin.routes.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import { adminAuthRoutes } from '../../modules/admin/auth/admin-auth.routes';
 import { adminDashboardRoutes } from '../../modules/admin/dashboard/admin-dashboard.routes';
 import { adminDestinationRoutes } from '../../modules/admin/destinations/admin-destinations.routes';
+import { adminCategoryRoutes } from '../../modules/admin/categories/admin-categories.routes';
 
 const router = Router();
 
@@ -17,5 +18,8 @@ router.use('/dashboard', adminDashboardRoutes);
 
 // 3. Admin Destinations Management (/api/v1/admin/destinations)
 router.use('/destinations', adminDestinationRoutes);
+
+// 4. Admin Categories Management (/api/v1/admin/categories)
+router.use('/categories', adminCategoryRoutes);
 
 export const adminRoutes = router;
